update .coveragerc file

--- a/.coveragerc
+++ b/.coveragerc
@@ -12,7 +12,6 @@ omit =
     */app/__init__.py
     */app/mock.py
   
-    */app/view.py
     */api/*
     */.vscode/*
     */certifi/*
@@ -55,6 +54,7 @@ omit =
     */multiprocessing/util.py 
     */numbers.py
     */uuid.py
-    */app.py 
+    */app.py
+    */app/manage.py 
     
 show_missing = True
